Sorocaba, dia 03/03/2016, criar o botão aluno no menu...

--- a/ProjetoMavenJSFPrimeFaces/src/main/resources/application_en.properties
+++ b/ProjetoMavenJSFPrimeFaces/src/main/resources/application_en.properties
@@ -6,6 +6,7 @@ pages.comuns.cabecalho.lingua               = Change Language:
 pages.comuns.menuLateral.gerencial 			= Manager
 pages.comuns.menuLateral.inicio             = Start    
 pages.comuns.menuLateral.options            = Options
+pages.comuns.menuLateral.aluno				= Student
 
 pages.inicio.welcome						= Welcome!
 pages.inicio.title							= System->Start
