--- a/ProjetoMavenJSFPrimeFaces/src/main/resources/application_pt.properties
+++ b/ProjetoMavenJSFPrimeFaces/src/main/resources/application_pt.properties
@@ -6,6 +6,7 @@ pages.comuns.cabecalho.lingua               = Trocar Linguagem:
 pages.comuns.menuLateral.gerencial 			= Gerencial
 pages.comuns.menuLateral.inicio             = In\u00edcio
 pages.comuns.menuLateral.options            = Op\u00e7\u00f5es    
+pages.comuns.menuLateral.aluno              = Aluno
 
 pages.inicio.welcome						= Bem vindo!
 pages.inicio.title							= Sistema->In\u00edcio
